--- a/style.css
+++ b/style.css
@@ -1,22 +1,22 @@
-body {background-color: rgb(187, 42, 90);
-}
-
 h1 {text-align: center;
-    color:black;
-    border-style: groove;
-    border-color: rgb(228, 8, 8);
+color: crimson;
 }
-h2 {text-align: center;
-     color: black;
-     border-style: dotted;
-     border-color: rgb(255, 114, 137);
+h2 {margin-left: 7%;
 }
-#ima1 {margin-right: 20%;
-    width: 20%;
+#ima1 {margin-left: 17%;
 }
-#ima2 {margin-right: 45%;
-     width: 30%;
+#ima2 { width: 70%;
 }
-h4 { text-align: center;
-    color:rgb(36, 31, 31);
+h2 {background-color: aqua;
 }
+h1 {border-style: double;
+    border-color: blueviolet;
+    border-width: 6px;}
+    h1{margin-right: 40%;
+       padding-left: 15%;
+    }
+
+    main {background-color: blueviolet;
+    }
+    footer{ color: chartreuse;
+    }
